add ffmpeg to videotrimmerview cjh

--- a/videotrimmerlibrary/src/main/res/values/strings.xml
+++ b/videotrimmerlibrary/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">videotrimmerlibrary</string>
+    <string name="shipped_ffmpeg_version">n2.4.2</string>
 </resources>
